# BuildYourBot

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml
.github/workflows/: ci-cd.yml
ai/: .dockerignore  Dockerfile  pyproject.toml
ai/src/: __init__.py
ai/src/api/: __init__.py
ai/src/buildyourbot/: cache.py  graph.py
chat/: .dockerignore  .env  .gitignore  Dockerfile  api.py  app.py  chat_history.db  chat_history.py  chat_service.py  requirements.txt  utils.py
chat/components/: chat_display.py  chatbox.py  graph_handler.py  search_bar.py  sidebar.py
chat/services/: chat_history_db.py  chat_service.py  db_service.py  openai_service.py
chat/utils/: config.py  routing.py  session_state.py
client/: .env  .gitignore  package-lock.json  package.json
client/src/: App.jsx
client/src/Drag/: draggableNode.js  store.js  submit.js  toolbar.js  ui.js
client/src/pages/: Login.css  (+3 more)
db/: Dockerfile
dbconn/: .gitIgnore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.js
dbconn/src/: app.ts  pool.ts
nginx/: nginx.conf
redis/: Dockerfile
redis/data/: dump.rdb
server/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  test.py
server/lib/: __init__.py
server/src/: __init__.py
server/src/api/models/: chat.py
server/src/api/v1/: __init__.py
server/src/buildyourbot/: __init__.py  graph.py  llms.py  state.py
server/src/buildyourbot/agents/: simple.py
server/src/buildyourbot/models/: simple.py
web/: .dockerignore  Dockerfile  package-lock.json  package.json
web/src/: App.css  App.jsx
(+43 files in other folders)
