[tool.poetry]
name = "buildyourbot"
version = "0.1.0"
description = ""
authors = ["Chinmay Pandya <chinmaypandya043@gmail.com>"]
readme = "README.md"
packages = [{include = "buildyourbot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
