[tool.poetry]
name = "buildyourbot"
version = "0.1.0"
description = ""
authors = ["Chinmay Pandya <chinmaypandya043@gmail.com>"]
readme = "README.md"
packages = [{include = "buildyourbot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = "^0.31.1"
langgraph = "^0.2.35"
langchain = "^0.3.3"
langchain-core = "^0.3.10"
langchain-community = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
